--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,8 @@ body{
     background-color: #FAFAFA;
 }
 .img--tenis{
-    width: 200px;
-    height: 210px;
+    width: 160px;
+    height: 180px;
     border-bottom: 3px solid var(--cor2);
 }
 .img--tenis:hover{
@@ -106,30 +106,26 @@ main > h1{
 /*===CARRINHO DE COMPRAS=====*/
 /*===========================*/
 .carrinho{
-    width: 480px;
-    /*width: 0vw;*/
-    height: 100vh;
-    display: none;
-
-    position: fixed;
-    right: 0;
-    top: 60px;
-    /*transition:all ease .2s;
-    overflow-x: hidden;*/
-    background-color: #f5f6fa;
-    /*background-color: hsl(0, 0%, 73%);*/
+    width: 0vw;
+    font-family:'Hepta Slab', Helvetica, Arial;
+    transition:all ease .2s;
+    overflow-x:hidden;
+    background-color:#f5f6fa;
 }
-/*
 .carrinho.show{
     width: 30vw;
-}*/
+}
 .div--carrinho{
-    width: 440px;
-    margin: auto;
+    margin-top: 60px;
+    padding:20px;
+
     background-color: #f5f6fa;
 }
 .div--carrinho > h1{
     text-align: center;
+}
+.div--carrinho span{
+    cursor: pointer;
 }
 .div--valor--item{
     margin-bottom: 10px;
@@ -139,12 +135,13 @@ main > h1{
     /*margin-right: 20px;*/
 }
 .info--compra > button{
-    width: 440px;
-    height: 38px;
+    width: 100%;
+    height: 45px;
     cursor: pointer;
 
     margin-top: 7px;
     border-style: none;
+    border-radius: 5px;
     font-size: 1.3em;
 
     color: #ededed;
@@ -273,3 +270,28 @@ main > h1{
 .button--cancelar:active{
     background-color: #a0a0a0c0;
 }
+
+@media (max-width:510px) {
+    .area--produtos {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .carrinho.show{
+        width: 50vw;
+    }
+}
+@media (max-width:703px) {
+    .carrinho.show{
+        width: 40vw;
+    }
+}
+@media (min-width:800px) {
+    .area--produtos {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+@media (min-width:1100px) {
+    .area--produtos {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
