--- a/css/style.css
+++ b/css/style.css
@@ -54,14 +54,33 @@ body{
 .preco--tenis{
     font-size: 15px;
 }
-
-
-
-
-
-
 .item--carrinho{
-    display: none;
+    display:  inline-block;
+    align-items:center;
+    /*display: none;*/
+    margin: 5px 5px;
+    background-color: #dfdfdf;
+    border-radius: 5px;
+}
+.item--carrinho > img{
+    width:103px;
+    height:100px;
+}
+.nome--item--carrinho{
+    text-align: center;
+}
+.area--quantidade--item--carrinho{
+    display: flex;
+    justify-content: center;
+    margin: 5px 0px 10px 0px;
+}
+.area--quantidade--item--carrinho button{
+    width: 25px;
+    height: 25px;
+    
+}
+.quantidade--item--carrinho{
+    margin: 5px;
 }
 /*===========================*/
 /*===========HEADER==========*/
@@ -83,8 +102,14 @@ nav{
     align-items: center;
     justify-content: space-between; /* flex-end; */ 
 }
-.menu-open span{
+.menu .icon{
+    cursor: pointer;
     color: var(--cor2);
+}
+.tem--produto--carrinho{
+    font-size: 30px;
+    color: white;
+    display: none;
 }
 /*===========================*/
 /*============MAIN===========*/
@@ -107,6 +132,7 @@ main > h1{
 /*===========================*/
 .carrinho{
     width: 0vw;
+
     font-family:'Hepta Slab', Helvetica, Arial;
     transition:all ease .2s;
     overflow-x:hidden;
@@ -117,7 +143,7 @@ main > h1{
 }
 .div--carrinho{
     margin-top: 60px;
-    padding:20px;
+    padding:10px;
 
     background-color: #f5f6fa;
 }
@@ -275,20 +301,36 @@ main > h1{
     .carrinho.show{
         width: 50vw;
     }
+    
 }
 @media (max-width:703px) {
     .carrinho.show{
         width: 40vw;
     }
 }
+/*@media (max-width:400px){
+    .carrinho {
+        width:auto;
+        position:fixed;
+        left:100vw;
+        right:0;
+        top:0;
+        bottom:0;
+        transition: all ease .2s;
+    }
+    .carrinho.show {
+        width:auto;
+    }
+}*/
 @media (min-width:800px) {
     .area--produtos {
         grid-template-columns: repeat(3, 1fr);
     }
 }
-@media (min-width:1100px) {
+@media (min-width:1000px) {
     .area--produtos {
         grid-template-columns: repeat(4, 1fr);
     }
+    
 }
 
